# Inventix_old

./: .gitignore  Makefile  README.md  pyproject.toml
client/: .eslintrc.cjs  .prettierrc.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.vue  main.js  style.css
client/src/components/App/: BlockBorder.vue
client/src/components/App/AppMain/: AppMain.vue
client/src/components/App/AppNavigation/: AppNavigation.vue
client/src/components/App/AppNavigation/fragments/: NavigationMenu.vue  NavigationTitle.vue
client/src/router/: index.js
client/src/stores/: useAuth.js
client/src/stores/App/: useNavigation.js
client/src/stores/Auth/: useAuth.js
client/src/views/: 404View.vue  AuthView.vue  HomeView.vue
src/: main.py
src/api/Auth/: crud.py  models.py  repo.py
src/core/: config.py  db_helper.py  logger.py
src/core/routers/: api_routers.py  client_router.py  media_router.py
src/prisma/: schema.prisma
src/prisma/migrations/20240317183341_init/: migration.sql
src/response/: api_response.py
src/utils/Auth/: auth.py  image.py
